--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,8 @@
             "style": "kebab-case"
           }
         ],
-        "eqeqeq": "error"
+        "eqeqeq": "error",
+        "semi": "error"
       }
     },
     {
